fix: beregning med kun avslag